# informed-search-whatever

./: .gitignore  AStar.cpp  AStar.hpp  Adjacent.hpp  BestFirst.cpp  BestFirst.hpp  CMakeLists.txt  GraphInfo.cpp  GraphInfo.hpp  HeuristicTable.xlsx  InformedBase.cpp  InformedBase.hpp  PathResult.cpp  PathResult.hpp  README.md  TrackingAllocator.cpp  TrackingAllocator.hpp  Vertex.cpp  Vertex.hpp  main.cpp  result.xlsx  romania.txt  sldtable.lua  teyvat.txt
